Fix the update method

--- a/src/Sale_Management.Domain.Shared/Localization/Sale_Management/en.json
+++ b/src/Sale_Management.Domain.Shared/Localization/Sale_Management/en.json
@@ -2,7 +2,8 @@
   "culture": "en",
   "texts": {
     "Menu:Home": "Home",
-    "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io."
+    "Welcome": "Welcome zoubir",
+    "LongWelcomeMessage": "Welcome to the sale Application",
+    "Menu:Clients": "Clients"
   }
 }
